--- a/src/SharpReverseProxy/SharpReverseProxy.csproj
+++ b/src/SharpReverseProxy/SharpReverseProxy.csproj
@@ -4,7 +4,7 @@
     <Description>Powerful Reverse Proxy written as OWIN Middleware. Perfect for asp.net, web.api, microservices, etc.</Description>
     <Version>1.3.0</Version>
     <Authors>Andre Carlucci</Authors>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>SharpReverseProxy</AssemblyName>
     <PackageId>SharpReverseProxy</PackageId>
     <PackageTags>aspnetcore;microservices;proxy;apigateway</PackageTags>
@@ -20,8 +20,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
